style(IPLSITE-29): ensure header doesn't cause content overlap

--- a/source/assets/_scss/general/base.scss
+++ b/source/assets/_scss/general/base.scss
@@ -54,7 +54,8 @@ body {
     }
 
     main {
-        margin: 0 0 $spacing-xl 0;
+        margin-top: 120px;
+        margin-bottom: $spacing-xl;
         opacity: 1;
         overflow: visible;
         transition: opacity $time-l;
@@ -63,6 +64,30 @@ body {
         &.loading {
             opacity: 0;
         }
+    }
+
+    @media screen and (min-width: $screen-s) {
+        main {
+            margin-top: 100px;
+        } 
+    }
+
+    @media screen and (min-width: $screen-m) {
+        main {
+            margin-top: 80px;
+        } 
+    }
+
+    @media screen and (min-width: $screen-l) {
+        main {
+            margin-top: 40px;
+        } 
+    }
+
+    @media screen and (min-width: $screen-xxl) {
+        main {
+            margin-top: 0;
+        } 
     }
 }
 
