--- a/source/assets/_scss/sections/navigation.scss
+++ b/source/assets/_scss/sections/navigation.scss
@@ -180,8 +180,7 @@
     }
 
     background: rgba($white, 1);
-    // box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
-    border-bottom: 1px solid $light-grey;  
+    // box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24); 
 }
 
 
